--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodejs-telegram-bot",
+  "name": "nodejs-game-telegram-bot",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
